# Beltrami

./: .gitignore  Beltrami.py  Init.py  InitGui.py  README.md  coldStart.py  modif.py  package.xml  pyproject.toml
.github/: CONTRIBUTING.md
Examples/: CascadeRadiale.FCStd  CascadeRadiale.FCStd1  Francis.FCStd  Francis.xlsx  Francis1.FCStd  Kaplan.FCStd  Pompe.FCStd  Turgo.FCStd
Exemples/: Francis.FCStd  Francis.FCStd1  Francis.xlsx  Kaplan.FCStd  Kaplan.xlsx  Pompe.FCStd  Pompe.xlsx
freecad/Beltrami/: Beltrami.py  ColdStart.py  Modify.py  __init__.py  init_gui.py
