<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Beltrami</name>
  <description>A workbench for designing turbomachine blades.</description>
  <version>1.0.6-alpha</version>
  <maintainer email="simturbweb@gmail.com">Michel Sabourin (Sabm01)</maintainer>
  <license file="LICENSE">LGPLv2.1</license>
  <url type="repository" branch="main">https://github.com/Simturb/Beltrami</url>
  <icon>Resources/icons/Beltrami_workbench_icon.svg</icon>

  <content>
    <workbench>
      <classname>BeltramiWB</classname>
      <subdirectory>./</subdirectory>
      <tag>curves</tag>
      <tag>nurbs</tag>
      <depend>Curves</depend>
    </workbench>
  </content>

</package>
