<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Beltrami</name>
  <description>A workbench for designing turbomachine blades.</description>
  <version>1.0.8-alpha</version>
  <maintainer email="simturbweb@gmail.com">Michel Sabourin (Sabm01)</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="main">https://github.com/Simturb/Beltrami</url>
  <url type="bugtracker">https://github.com/Simturb/Beltrami/issues</url>
  <url type="readme">https://github.com/Simturb/Beltrami/blob/main/README.md</url>
  <url type="documentation">https://https://michelsabourin.scenari-community.org/Outils/Manuel_utilisateur/co/Manuel_utilisateur.html</url>
  <icon>Resources/icons/Beltrami_workbench_icon.svg</icon>

  <content>
    <workbench>
      <classname>BeltramiWB</classname>
      <subdirectory>./</subdirectory>
      <freecadmin>0.20.1</freecadmin>
      <tag>curves</tag>
      <tag>nurbs</tag>
      <depend>Curves workbench</depend>
    </workbench>
  </content>

</package>
